enable adding Beckon users to Contacts

--- a/AndroidAppTestToolkit/app/build.gradle
+++ b/AndroidAppTestToolkit/app/build.gradle
@@ -1,15 +1,15 @@
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
+        classpath 'com.android.tools.build:gradle:1.1.1'
     }
 }
 apply plugin: 'com.android.application'
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 android {
